--- a/apps/iOS/MNNLLMChat/MNNLLMiOS/Util/Localizable.xcstrings
+++ b/apps/iOS/MNNLLMChat/MNNLLMiOS/Util/Localizable.xcstrings
@@ -104,9 +104,15 @@
     },
     "button.clear" : {
       "localizations" : {
-        "zh-Hans" : {
+        "en" : {
           "stringUnit" : {
             "state" : "translated",
+            "value" : "Clear"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "needs_review",
             "value" : "清除"
           }
         }
@@ -130,9 +136,15 @@
     },
     "button.done" : {
       "localizations" : {
-        "zh-Hans" : {
+        "en" : {
           "stringUnit" : {
             "state" : "translated",
+            "value" : "Done"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "needs_review",
             "value" : "完成"
           }
         }
