[fix] use modelers to download

--- a/apps/iOS/MNNLLMChat/MNNLLMiOS/Localizable.xcstrings
+++ b/apps/iOS/MNNLLMChat/MNNLLMiOS/Localizable.xcstrings
@@ -1260,7 +1260,7 @@
         }
       }
     },
-    "Use modeler to download" : {
+    "Use Modelers to download" : {
       "localizations" : {
         "zh-Hans" : {
           "stringUnit" : {
