--- a/apps/iOS/MNNLLMChat/MNNLLMiOS/Localizable.xcstrings
+++ b/apps/iOS/MNNLLMChat/MNNLLMiOS/Localizable.xcstrings
@@ -1046,12 +1046,12 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Deep Thinking"
+            "value" : "Think"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
-            "state" : "translated",
+            "state" : "needs_review",
             "value" : "深度思考"
           }
         }
