--- a/apps/Android/MnnLlmChat/app/src/main/res/values-zh/strings.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values-zh/strings.xml
@@ -567,4 +567,21 @@
     <string name="unknown_error">未知错误</string>
     <string name="not_available">不可用</string>
     <string name="unknown_model">未知模型</string>
+    
+    <!-- Large Model Warning Dialog Strings -->
+    <string name="large_model_warning_title">大模型警告</string>
+    <string name="large_model_warning_message">模型 "%1$s" 大小为 %2$sB，这是一个相当大的模型，可能会因为内存限制导致应用崩溃。您确定要继续打开这个模型吗？</string>
+    <string name="continue_open">继续打开</string>
+    
+    <!-- Privacy Policy Strings -->
+    <string name="privacy_policy_title">隐私政策协议</string>
+    <string name="privacy_policy_content">欢迎使用MNN Chat！在使用我们的应用程序之前，请阅读并同意我们的隐私政策。\n\n我们致力于保护您的隐私和个人信息。本应用程序可能会收集和处理某些数据，以便为您提供更好的服务。\n\n通过使用本应用程序，您同意：\n• 允许应用程序收集功能所需的必要数据\n• 了解您的数据可能在您的设备上进行本地处理\n• 接受我们的服务条款和隐私实践\n\n如果您不同意这些条款，请不要使用本应用程序。\n\n有关我们隐私实践的更多详细信息，请通过我们的官方渠道联系我们。</string>
+    <string name="privacy_policy_agree">我已阅读并同意隐私政策</string>
+    <string name="privacy_policy_agree_button">同意并继续</string>
+    <string name="privacy_policy_disagree">不同意</string>
+    <string name="privacy_policy_required">您必须同意隐私政策才能使用本应用程序</string>
+    <string name="privacy_policy_exit_message">您选择不同意隐私政策。应用程序现在将退出。</string>
+    <string name="loading_models">加载模型中…</string>
+    <string name="copying_builtin_models">首次安装，正在复制内置模型…</string>
+    <string name="builtin">内置</string>
 </resources>
